# SmartReco

./: CMakeLists.txt  README.md
example/: main.cpp
includes/graphics/: Image.hpp  Image.inl
includes/maths/: Activation.hpp  Matrix.hpp  Matrix.inl  Vec3.hpp
